Fix word wrap in the pre tag on mobile phones

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -133,4 +133,5 @@ pre {
   }
 
   header { padding: 15px;}
+  pre {word-wrap:anywhere;}
 }
